# 455

./: 455Proj_CreateTables.sql  455Proj_PopulateTables.sql  MainTasksNotes.txt
QtProject/: LoginDialog.cpp  LoginDialog.h  QtProject (Jessica Baron’s MacBook's conflicted copy 2016-10-14).pro  QtProject.pro  QtProject.pro.user.cd6814d  QtProject.pro.user.d6baa89  main (Jessica Baron’s MacBook's conflicted copy 2016-10-14).cpp  main.cpp  mainwindow (Jessica Baron’s MacBook's conflicted copy 2016-10-14).cpp  mainwindow (Jessica Baron’s MacBook's conflicted copy 2016-10-14).h  mainwindow.cpp  mainwindow.h  mainwindow.ui
clionTest_Mac/: CMakeLists.txt  main.cpp
